compiler/tests/fixtures/compile_errors/mismatch_return_type.fe
contract Foo:

    pub def bar() -> address:
        return 1
